fixed: hidden-description bottom not aligned problm

--- a/about_us/app/about_us.sass
+++ b/about_us/app/about_us.sass
@@ -265,6 +265,11 @@ a
   font-size: 18px
   padding-right: 10%
 
+.hidden-description
+  position: absolute
+  bottom: 0
+  padding-bottom: 1vh
+
 @media only screen and (max-width: 1024px)
   /* display on phone
 
